test/bad/10-int-out-of-bounds.mac



int main() {
    //always return an error about int too big 
    // as it checks 9223372036854775809
    // and not -9223372036854775809
    return -9223372036854775809;
}